second commit of all the change in project

--- a/app_login/templates/app_login/login.html
+++ b/app_login/templates/app_login/login.html
@@ -11,7 +11,9 @@
                   <div class="col-lg-4">
                      <div class="login-box">
                      {% for message in messages %}
-                        {% if message %}
+                        {% if message.error %}
+                        <div class="alert alert-danger alert-{{message.tags}} "> <strong>{{message}}</strong></div>
+                        {% else %}
                         <div class="alert alert-success alert-{{message.tags}} "> <strong>{{message}}</strong></div>
                      {% endif %}
                      {% endfor %}
