--- a/app_admin/templates/app_admin/cooeperative-list.html
+++ b/app_admin/templates/app_admin/cooeperative-list.html
@@ -1,72 +1,80 @@
 {% extends 'app_admin/base.html' %}
 {% block title %} Ajout | Liste cooeperative {% endblock %}
-{% block style %}
-    <style>
-        body{
-            background-color:rgb(229, 227, 227)
-        }
-    </style>
-{% endblock %}
+
 {% block dashbord%}
 {% load static %}
 {% load crispy_forms_tags %}
-
-<div class="container">
+<section class="container py-5">
     <div class="row">
-        <div class="col-md-12">
-            <h1 class="text-center mt-3">Liste des coopératives</h1>
-        </div>
-        <div class="col-md-5 mt-3">
-            <div class="border bg-white p-3 b_1">
-        <h4 class="text-success text-center"><i class="fas fa-plus"></i> Ajouter une coopérative</h4>
-                {% if sauvegarde %}
-                <p>Coopérative ajoutée avec succès </p>
-                {% endif %}
-        <hr>
-      <form action="" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-          {{form|crispy}}
-        <div>
-          <button class="btn btn-success btn-block mt-3 mb-3">Enregistrer les données dans la base</button>
-        </div>
-      </form>
-      </div>
-        </div>
-        <div class="col-md-7 mt-3">
-            {% if list_cooeperative %}
-            <div class="card">
-                <div class="card-body">
-                    <table class="table table table-hover text-center">
-                        <thead class="bg-success text-white">
-                            <tr>
-                                <th>NOM COOPERATIVES</th>
-                                <th>MEMBRE</th>
-                                <th>VILLAGE</th>
-                                <th >ACTION</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                           {% for cooeperative in list_cooeperative %}
-                               <tr>
-                                   <td><a class="text-info" href="{% url 'modifier-cooeperative' cooeperative.id %}">{{cooeperative.name|upper}}</a></td>
-                                   <td>{{cooeperative.members_in}}</td>
-                                   <td>{{cooeperative.city}}</td>
-                                   <td>
-                                       <a href="{% url 'modifier-cooeperative' cooeperative.id %}" class="btn btn-info"><i class="fas fa-edit"></i></a>
-                                       <a href="{% url 'supprimer-cooeperative' cooeperative.id %}" class="btn btn-danger"><i class="fas fa-trash"></i></a>
-                                   </td>
-                               </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-             <a class="btn btn-success mt-3" href="">Voir la liste complète</a>
-
-            {% else %}
-            <p>Vous n'avez encore enregistré aucune cooeperative </p>
-            {% endif %}
+        <div class="col-lg-8 col-sm mb-5 mx-auto">
+            <h1 class="text-center lead text-primary text-uppercase animate__backInUp">
+                 Page d'administration (CRUD) de la plateforme Agri-Mairie
+            </h1>
         </div>
     </div>
+        <div class="dropdown-divider border-warning"></div>
+    <div class="row">
+        <div class="col-md-6">
+            <h5 class="fw-bold mb-0">
+                Liste des Coopératives
+            </h5>
+        </div>
+        <div class="col-md-6">
+            <div class="d-flex justify-content-end">
+                <button type="button" class="btn btn-sm btn-primary mr-3" data-toggle="modal" data-target="#createModal"> <i class="fas fa-folder-plus"></i> Nouveau</button>
+                <a href="{% url 'export-excel' %}" class="button btn-sm btn btn-success"><i class="fas fa-table"></i> Exporter</a>
+            </div>
+        </div>
+    </div>
+        <div class="dropdown-divider border-warning"></div>
+        <!-- Include Cooperative list -->
+    {% include 'partials/listing-cooperative.html' %}
+</section>
+
+<!-- Add Cooperative Modal Start-->
+<div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="createModalLabel">Ajouter une Nouvelle Coopérative</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <!-- Cooperative Add Form include -->
+        {% include 'app_admin/form_add_cooperative.html' %}
+          <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+      </div>
+      </div>
+    </div>
+  </div>
 </div>
+<!-- Add Cooperative Modal End-->
+{% if sauvegarde %}
+                {% endif %}
+
+
+<!-- Modal Info Coopérative Start -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal Info Coopérative End -->
 {% endblock %}
