--- a/mairie/static/mairie/css/custom.css
+++ b/mairie/static/mairie/css/custom.css
@@ -6699,3 +6699,24 @@ section.wf100.p80.fcampaigns {
 	transition: all ease-in-out 0.3s;
 	-webkit-transition: all ease-in-out 0.3s;
 }
+
+
+/* Custom CSS Register Page */
+
+#username-error{
+    z-index: 9999;
+}
+.error{
+    color: red;
+    margin-top: -16px;
+    margin-bottom: 30px;
+    font-size: 25px;
+    transform: rotate(45deg);
+    transition: all ease-in 1.5s;
+}
+
+.success{
+    color: green;
+    margin-top: -16px;
+    margin-bottom: 30px;
+}
